Mobil View check

--- a/index.html
+++ b/index.html
@@ -13,17 +13,155 @@
 
 <nav>
     <img src="./assets/img/logo.jpeg" alt="logo">
-    <h1>Theo Store</h1>
+    <h1>Theo Pulpit</h1>
     <i class="fa-solid fa-bars"></i>
 </nav>
 <main>
     <div class="card">
-        <img src="" alt="">
-
+        <div class="front">
+            <img src="./assets/img/foto1.jpeg" alt="figura entity">
+            <h3>Figurita Entity N°1</h3>
+        </div>
+        <div class="back">
+            <h3>Descripcion</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo esse, voluptatum quisquam aspernatur dolores fugiat neque necessitatibus a recusandae dolor ratione inventore. Accusamus ut numquam est itaque a nostrum eaque enim provident! Rem, nobis libero? Soluta et, enim reiciendis ipsum dicta illum. Quo pariatur quibusdam eligendi natus labore. Ex, praesentium.</p>
+        </div>
     </div>
-
+    <div class="card">
+        <div class="front">
+            <img src="./assets/img/foto2.jpeg" alt="figura entity">
+            <h3>Figurita Entity N°2</h3>
+        </div>
+        <div class="back">
+            <h3>Descripcion</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo esse, voluptatum quisquam aspernatur dolores fugiat neque necessitatibus a recusandae dolor ratione inventore. Accusamus ut numquam est itaque a nostrum eaque enim provident! Rem, nobis libero? Soluta et, enim reiciendis ipsum dicta illum. Quo pariatur quibusdam eligendi natus labore. Ex, praesentium.</p>
+        </div>
+    </div>
+    <div class="card">
+        <div class="front">
+            <img src="./assets/img/foto3.jpeg" alt="figura entity">
+            <h3>Figurita Entity N°2</h3>
+        </div>
+        <div class="back">
+            <h3>Descripcion</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo esse, voluptatum quisquam aspernatur dolores fugiat neque necessitatibus a recusandae dolor ratione inventore. Accusamus ut numquam est itaque a nostrum eaque enim provident! Rem, nobis libero? Soluta et, enim reiciendis ipsum dicta illum. Quo pariatur quibusdam eligendi natus labore. Ex, praesentium.</p>
+        </div>
+    </div>
+    <div class="card">
+        <div class="front">
+            <img src="./assets/img/foto4.jpeg" alt="figura entity">
+            <h3>Figurita Entity N°3</h3>
+        </div>
+        <div class="back">
+            <h3>Descripcion</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo esse, voluptatum quisquam aspernatur dolores fugiat neque necessitatibus a recusandae dolor ratione inventore. Accusamus ut numquam est itaque a nostrum eaque enim provident! Rem, nobis libero? Soluta et, enim reiciendis ipsum dicta illum. Quo pariatur quibusdam eligendi natus labore. Ex, praesentium.</p>
+        </div>
+    </div>
+    <div class="card">
+        <div class="front">
+            <img src="./assets/img/foto5.jpeg" alt="figura entity">
+            <h3>Figurita Entity N°4</h3>
+        </div>
+        <div class="back">
+            <h3>Descripcion</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo esse, voluptatum quisquam aspernatur dolores fugiat neque necessitatibus a recusandae dolor ratione inventore. Accusamus ut numquam est itaque a nostrum eaque enim provident! Rem, nobis libero? Soluta et, enim reiciendis ipsum dicta illum. Quo pariatur quibusdam eligendi natus labore. Ex, praesentium.</p>
+        </div>
+    </div>
+    <div class="card">
+        <div class="front">
+            <img src="./assets/img/foto6.jpeg" alt="figura entity">
+            <h3>Figurita Entity N°5</h3>
+        </div>
+        <div class="back">
+            <h3>Descripcion</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo esse, voluptatum quisquam aspernatur dolores fugiat neque necessitatibus a recusandae dolor ratione inventore. Accusamus ut numquam est itaque a nostrum eaque enim provident! Rem, nobis libero? Soluta et, enim reiciendis ipsum dicta illum. Quo pariatur quibusdam eligendi natus labore. Ex, praesentium.</p>
+        </div>
+    </div>
+    <div class="card">
+        <div class="front">
+            <img src="./assets/img/foto7.jpeg" alt="figura entity">
+            <h3>Figurita Entity N°6</h3>
+        </div>
+        <div class="back">
+            <h3>Descripcion</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo esse, voluptatum quisquam aspernatur dolores fugiat neque necessitatibus a recusandae dolor ratione inventore. Accusamus ut numquam est itaque a nostrum eaque enim provident! Rem, nobis libero? Soluta et, enim reiciendis ipsum dicta illum. Quo pariatur quibusdam eligendi natus labore. Ex, praesentium.</p>
+        </div>
+    </div>
+    <div class="card">
+        <div class="front">
+            <img src="./assets/img/foto8.jpeg" alt="figura entity">
+            <h3>Figurita Entity N°7</h3>
+        </div>
+        <div class="back">
+            <h3>Descripcion</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo esse, voluptatum quisquam aspernatur dolores fugiat neque necessitatibus a recusandae dolor ratione inventore. Accusamus ut numquam est itaque a nostrum eaque enim provident! Rem, nobis libero? Soluta et, enim reiciendis ipsum dicta illum. Quo pariatur quibusdam eligendi natus labore. Ex, praesentium.</p>
+        </div>
+    </div>
+    <div class="card">
+        <div class="front">
+            <img src="./assets/img/foto9.jpeg" alt="figura entity">
+            <h3>Figurita Entity N°7</h3>
+        </div>
+        <div class="back">
+            <h3>Descripcion</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo esse, voluptatum quisquam aspernatur dolores fugiat neque necessitatibus a recusandae dolor ratione inventore. Accusamus ut numquam est itaque a nostrum eaque enim provident! Rem, nobis libero? Soluta et, enim reiciendis ipsum dicta illum. Quo pariatur quibusdam eligendi natus labore. Ex, praesentium.</p>
+        </div>
+    </div>
+    <div class="card">
+        <div class="front">
+            <img src="./assets/img/foto10.jpeg" alt="figura entity">
+            <h3>Figurita Entity N°8</h3>
+        </div>
+        <div class="back">
+            <h3>Descripcion</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo esse, voluptatum quisquam aspernatur dolores fugiat neque necessitatibus a recusandae dolor ratione inventore. Accusamus ut numquam est itaque a nostrum eaque enim provident! Rem, nobis libero? Soluta et, enim reiciendis ipsum dicta illum. Quo pariatur quibusdam eligendi natus labore. Ex, praesentium.</p>
+        </div>
+    </div>
+    <div class="card">
+        <div class="front">
+            <img src="./assets/img/foto11.jpeg" alt="figura entity">
+            <h3>Figurita Entity N°8</h3>
+        </div>
+        <div class="back">
+            <h3>Descripcion</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo esse, voluptatum quisquam aspernatur dolores fugiat neque necessitatibus a recusandae dolor ratione inventore. Accusamus ut numquam est itaque a nostrum eaque enim provident! Rem, nobis libero? Soluta et, enim reiciendis ipsum dicta illum. Quo pariatur quibusdam eligendi natus labore. Ex, praesentium.</p>
+        </div>
+    </div>
+    <div class="card">
+        <div class="front">
+            <img src="./assets/img/foto12.jpeg" alt="figura entity">
+            <h3>Figurita Entity N°9</h3>
+        </div>
+        <div class="back">
+            <h3>Descripcion</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo esse, voluptatum quisquam aspernatur dolores fugiat neque necessitatibus a recusandae dolor ratione inventore. Accusamus ut numquam est itaque a nostrum eaque enim provident! Rem, nobis libero? Soluta et, enim reiciendis ipsum dicta illum. Quo pariatur quibusdam eligendi natus labore. Ex, praesentium.</p>
+        </div>
+    </div>
+    <div class="card">
+        <div class="front">
+            <img src="./assets/img/foto13.jpeg" alt="figura entity">
+            <h3>Figurita Entity N°9</h3>
+        </div>
+        <div class="back">
+            <h3>Descripcion</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo esse, voluptatum quisquam aspernatur dolores fugiat neque necessitatibus a recusandae dolor ratione inventore. Accusamus ut numquam est itaque a nostrum eaque enim provident! Rem, nobis libero? Soluta et, enim reiciendis ipsum dicta illum. Quo pariatur quibusdam eligendi natus labore. Ex, praesentium.</p>
+        </div>
+    </div>
 </main>
-<footer></footer>
+<footer>
+    <div>
+        <a href="https://web.facebook.com/">
+            <i class="fa-brands fa-facebook"></i>
+        </a>
+        <a href="https://www.tiktok.com/">
+            <i class="fa-brands fa-tiktok"></i>
+        </a>
+        <a href="https://www.instagram.com/">
+            <i class="fa-brands fa-instagram"></i>
+        </a>
+    </div>
+    <h3>©2023 Copyright</h3>
+</footer>
 
 
 </body>
