Cambio de Nombres Peticion Cliente

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="card" id="f1">
             <div class="front">
                 <img src="./assets/img/foto1.jpeg" alt="figura entity">
-                <h3>Figurita Entity N°1</h3>
+                <h3>Figurita N°1 El Sobras</h3>
             </div>
             <div class="back">
                 <h3>Descripcion</h3>
@@ -46,7 +46,7 @@
         <div class="card" id="f2">
             <div class="front">
                 <img src="./assets/img/foto2.jpeg" alt="figura entity">
-                <h3>Figurita Entity N°2</h3>
+                <h3>Figurita N°2 Entiry Primal</h3>
             </div>
             <div class="back">
                 <h3>Descripcion</h3>
@@ -59,7 +59,7 @@
         <div class="card" >
             <div class="front">
                 <img src="./assets/img/foto3.jpeg" alt="figura entity">
-                <h3>Figurita Entity N°2</h3>
+                <h3>Figurita N°2 Entiry Primal</h3>
             </div>
             <div class="back">
                 <h3>Descripcion</h3>
@@ -72,7 +72,7 @@
         <div class="card" id="f3">
             <div class="front">
                 <img src="./assets/img/foto4.jpeg" alt="figura entity">
-                <h3>Figurita Entity N°3</h3>
+                <h3>Figurita N°3 Pelota Salterina Hallowen</h3>
             </div>
             <div class="back">
                 <h3>Descripcion</h3>
@@ -85,7 +85,7 @@
         <div class="card" id="f4">
             <div class="front">
                 <img src="./assets/img/foto5.jpeg" alt="figura entity">
-                <h3>Figurita Entity N°4</h3>
+                <h3>Figurita N°4 Among Us Convirtiendose Entiry</h3>
             </div>
             <div class="back">
                 <h3>Descripcion</h3>
@@ -98,7 +98,7 @@
         <div class="card" id="f5">
             <div class="front">
                 <img src="./assets/img/foto6.jpeg" alt="figura entity">
-                <h3>Figurita Entity N°5</h3>
+                <h3>Figurita N°5 Among Us Personalizados</h3>
             </div>
             <div class="back">
                 <h3>Descripcion</h3>
@@ -111,7 +111,7 @@
         <div class="card" id="f6">
             <div class="front">
                 <img src="./assets/img/foto7.jpeg" alt="figura entity">
-                <h3>Figurita Entity N°6</h3>
+                <h3>Figurita N°6 <br>Among Us Medio Hueso</h3>
             </div>
             <div class="back">
                 <h3>Descripcion</h3>
@@ -124,7 +124,7 @@
         <div class="card" >
             <div class="front">
                 <img src="./assets/img/foto8.jpeg" alt="figura entity">
-                <h3>Figurita Entity N°7</h3>
+                <h3>Figurita N°7 Masa Dientes</h3>
             </div>
             <div class="back">
                 <h3>Descripcion</h3>
@@ -137,7 +137,7 @@
         <div class="card" id="f7">
             <div class="front">
                 <img src="./assets/img/foto9.jpeg" alt="figura entity">
-                <h3>Figurita Entity N°7</h3>
+                <h3>Figurita N°7 Masa Dientes</h3>
             </div>
             <div class="back">
                 <h3>Descripcion</h3>
@@ -150,7 +150,7 @@
         <div class="card" >
             <div class="front">
                 <img src="./assets/img/foto10.jpeg" alt="figura entity">
-                <h3>Figurita Entity N°8</h3>
+                <h3>Figurita N°8 Red Fase 1</h3>
             </div>
             <div class="back">
                 <h3>Descripcion</h3>
@@ -163,7 +163,7 @@
         <div class="card" id="f8">
             <div class="front">
                 <img src="./assets/img/foto11.jpeg" alt="figura entity">
-                <h3>Figurita Entity N°8</h3>
+                <h3>Figurita N°8 Red Fase 1</h3>
             </div>
             <div class="back">
                 <h3>Descripcion</h3>
@@ -176,7 +176,7 @@
         <div class="card" >
             <div class="front">
                 <img src="./assets/img/foto12.jpeg" alt="figura entity">
-                <h3>Figurita Entity N°9</h3>
+                <h3>Figurita N°9 Kofy Entery</h3>
             </div>
             <div class="back">
                 <h3>Descripcion</h3>
@@ -189,7 +189,7 @@
         <div class="card" id="f9">
             <div class="front">
                 <img src="./assets/img/foto13.jpeg" alt="figura entity">
-                <h3>Figurita Entity N°9</h3>
+                <h3>Figurita N°9 Koffy Entery</h3>
             </div>
             <div class="back">
                 <h3>Descripcion</h3>
