nuevo error de nombres

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="card" id="f2">
             <div class="front">
                 <img src="./assets/img/foto2.jpeg" alt="figura entity">
-                <h3>Figurita N°2 Entiry Primal</h3>
+                <h3>Figurita N°2 Entiry Principal</h3>
             </div>
             <div class="back">
                 <h3>Descripcion</h3>
@@ -59,7 +59,7 @@
         <div class="card" >
             <div class="front">
                 <img src="./assets/img/foto3.jpeg" alt="figura entity">
-                <h3>Figurita N°2 Entiry Primal</h3>
+                <h3>Figurita N°2 Entiry Principal</h3>
             </div>
             <div class="back">
                 <h3>Descripcion</h3>
@@ -72,7 +72,7 @@
         <div class="card" id="f3">
             <div class="front">
                 <img src="./assets/img/foto4.jpeg" alt="figura entity">
-                <h3>Figurita N°3 Pelota Salterina Hallowen</h3>
+                <h3>Figurita N°3 Pelota Saltarina Hallowen</h3>
             </div>
             <div class="back">
                 <h3>Descripcion</h3>
